force-app/main/default/objects/sugati__Opportunity_Image__c/sugati__Opportunity_Image__c.object-meta.xml
<CustomObject>
    <description>To Store Images for Different Form and Pages.</description>
    <label>Opportunity Image</label>
    <nameField>
        <label>Opportunity Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>