force-app/main/default/objects/sugati__Opportunity_Image__c/fields/sugati__OI_Image_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__OI_Image_Type__c</fullName>
    <label>Image Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tour Banner Image</fullName>
            </value>
            <value>
                <fullName>Tour Enquiry Image</fullName>
            </value>
            <value>
                <fullName>Tour Search Result Image</fullName>
            </value>
            <value>
                <fullName>Tour Detail Image</fullName>
            </value>
            <value>
                <fullName>FIT Onboarding Image</fullName>
            </value>
            <value>
                <fullName>New Booking Image</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>