force-app/main/default/objects/sugati__Opportunity_Image__c/fields/sugati__OI_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__OI_Image_URL__c</fullName>
    <description>To Store Image URL for show on Form and Pages.</description>
    <inlineHelpText>To Store Image URL for show on Form and Pages.</inlineHelpText>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>