force-app/main/default/objects/sugati__Opportunity_Image__c/fields/sugati__OI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__OI_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Images</relationshipLabel>
    <relationshipName>Opportunity_Images</relationshipName>
    <type>Lookup</type>
</CustomField>