force-app/main/default/objects/sugati__Opportunity_Image__c/fields/sugati__S_OI_Actual_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_OI_Actual_Image_URL__c</fullName>
    <formula>IF( 
    sugati__S_OI_Use_External_Image_Url__c, 
    sugati__OI_Image_URL__c, 
    &apos;/sfc/servlet.shepherd/version/download/&apos; +  sugati__S_OI_File_Id__c
)</formula>
    <label>Actual Image URL</label>
    <type>Text</type>
</CustomField>