force-app/main/default/objects/sugati__Opportunity_Image__c/fields/sugati__S_OI_File_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_OI_File_Id__c</fullName>
    <label>File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>