force-app/main/default/objects/sugati__Opportunity_Image__c/fields/sugati__S_OI_Image_Preview__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_OI_Image_Preview__c</fullName>
    <formula>IMAGE(sugati__S_OI_Actual_Image_URL__c, &quot;Image Preview&quot;)</formula>
    <label>Image Preview</label>
    <type>Text</type>
</CustomField>