force-app/main/default/objects/sugati__Opportunity_Image__c/fields/sugati__S_OI_Use_External_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_OI_Use_External_Image_Url__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use External Image Url</label>
    <type>Checkbox</type>
</CustomField>