force-app/main/default/objects/sugati__Opportunity_Image__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__OI_Image_Type__c</columns>
    <columns>sugati__OI_Image_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>